# cross

./: CHANGELOG.md  Cargo.toml  README.md  targets.toml
.cargo/: config.toml
.changes/: 817.json  947.json  967.json
.changes/template/: CHANGELOG.md
.github/workflows/: ci.yml  weekly.yml
changeset/: Cargo.toml
changeset/src/: config.rs  date.rs  fmt.rs  git.rs  id.rs  lib.rs  main.rs  pattern.rs  stream.rs  util.rs
ci/: docker_push.sh  shared.sh  test-cross-image.sh  test-docker-in-docker.sh  test-foreign-toolchain.sh  test-remote.sh  test.sh
docker/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.arm-unknown-linux-gnueabi  Dockerfile.arm-unknown-linux-gnueabihf  Dockerfile.armv5te-unknown-linux-gnueabi  Dockerfile.armv7-unknown-linux-gnueabihf  Dockerfile.i686-pc-windows-gnu  Dockerfile.i686-unknown-freebsd  Dockerfile.mips-unknown-linux-gnu  Dockerfile.mips64-unknown-linux-gnuabi64  Dockerfile.mips64el-unknown-linux-gnuabi64  Dockerfile.mipsel-unknown-linux-gnu  Dockerfile.powerpc-unknown-linux-gnu  Dockerfile.powerpc64-unknown-linux-gnu  Dockerfile.powerpc64le-unknown-linux-gnu  Dockerfile.riscv64gc-unknown-linux-gnu  Dockerfile.s390x-unknown-linux-gnu  Dockerfile.sparc64-unknown-linux-gnu  Dockerfile.x86_64-unknown-freebsd  Dockerfile.x86_64-unknown-linux-gnu  crosstool-ng.sh  linux-image.sh  wine.sh
docs/: cross_toml.md
small-lock/: Cargo.toml
small-lock/src/: lib.rs  windows.rs
src/: cargo.rs  cli.rs  config.rs  cross_toml.rs  docker.rs  errors.rs  extensions.rs  file.rs  lib.rs  rustc.rs  shell.rs  temp.rs
src/commands/: containers.rs  (+2 more)
(+11 files in other folders)
