[package]
documentation = "https://github.com/cross-rs/cross"
license = "MIT OR Apache-2.0"
name = "changeset"
repository = "https://github.com/cross-rs/cross"
version = "0.0.0-dev.0"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4"
clap = { version = "3.2.2", features = ["derive", "env", "unstable-v4"] }
color-eyre = { version = "0.6", default-features = false }
eyre = "0.6"
once_cell = "1.12"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
toml = "0.5"
